# CRR

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API_AUDIT.md  API_STABILITY.md  CAPABILITIES.md  PERFORMANCE_NOTES.md  SIMPLIFICATION_AND_CACHING.md
examples/: _bootstrap.py  alcubierre_metric.py  algebra_valued_forms.py  audit_api.py  audit_benchmarks.py  audit_capabilities.py  covariant_derivative_sphere.py  crr_showcase.py  cylinder.py  cylinder_area.py  de_sitter_ads.py  embedded_sphere.py  euclidean_plane.py  extended_relativity_presets.py  extrinsic_cylinder.py  extrinsic_sphere.py  extrinsic_torus.py  forms_basic.py  gauge_abelian_transform.py  gauge_bianchi_identity.py  gauge_su2_curvature.py  gauge_u1_maxwell.py  gauss_bonnet_sphere.py  gauss_bonnet_torus.py  geodesics_sphere.py  hodge_laplacian_scalar.py  hodge_star_euclidean.py  integrate_sphere_area.py  kerr_and_rn_limits.py  lie_for_gauge_preview.py  lie_heisenberg.py  lie_sl2r.py  lie_so3.py  maxwell_forms_flat.py  minimal_surfaces.py  numeric_geodesic_cylinder.py  numeric_geodesic_poincare.py  numeric_geodesic_sphere.py  numeric_geodesic_torus.py  plot_forms_2d.py  (+16 more)
notebooks/: 01_sphere_geometry.py  02_torus_geometry.py  03_gauss_bonnet.py  04_numeric_geodesics.py  05_differential_forms.py  06_maxwell_forms.py  07_intro_relativity.py  08_visualizing_surfaces.py  09_visualizing_curvature.py  10_visualizing_geodesics.py  11_visualizing_forms.py  _bootstrap.py
tests/: test_api_polish.py  test_audit.py  test_display.py  test_forms.py  test_gauge.py  test_geometry.py  test_integration.py  (+5 more)
(+64 files in other folders)
