[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crr"
version = "0.5.0"
description = "Symbolic differential geometry tools for curvature, Ricci, and Riemann tensors."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "CRR contributors" }
]
keywords = ["differential-geometry", "general-relativity", "sympy", "riemannian-geometry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
viz = [
  "matplotlib>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/crr"]
